--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             '<div style="width: 200px;"><p>'+title+'</p></div>' +
             '<video style="width: 200px; height: 200px;" controls="controls" src="'+url+'"/>' +
             '<div>' +
-            '   <input type="checkbox" value="\''+id+'\'" name="selected">' +
+            '   <input type="checkbox" value="'+id+'" name="selected">' +
                 '<span style="float: right">' +
                 '   <button class="btn btn-sm btn-primary" style="display: none"置顶</button>' +
                 '   <button class="btn btn-sm btn-danger" onclick="deleteElement(\''+id+'\')">屏蔽</button>' +
@@ -147,7 +147,7 @@
             '<div style="width: 200px;"><p>'+title+'</p></div>' +
             '<img style="width: 200px; height: 200px;" src="'+url+'"/>' +
             '<div>' +
-            '   <input type="checkbox" value="\''+id+'\'" name="selected">' +
+            '   <input type="checkbox" value="'+id+'" name="selected">' +
                 '<span style="float: right">' +
                 '   <button class="btn btn-sm btn-primary" style="display: none">置顶</button>' +
                 '   <button class="btn btn-sm btn-danger" onclick="deleteElement(\''+id+'\')">屏蔽</button>' +
