--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
                 status: -1
             }),
             success: function(data){
-                $('#'+id).css('display', 'none');
+                if(data.status == 0){
+                    $('#'+id).css('display', 'none');
+                }
             },
             error: function (e) {
                 alert('Option Error');
@@ -119,8 +121,7 @@
         });
     }
 
-    function drowElement(id, ele) {
-        console.log(ele);
+    function drowElement(id) {
         $.ajax({
             method: "post",
             url: 'https://shop.mixit.fun/manager/setTop',
@@ -132,6 +133,11 @@
                 objectId: id,
                 score: -1
             }),
+            success: function(data){
+                if(data.status == 0){
+                    $('#'+id).css('display', 'none');
+                }
+            },
             error: function (e) {
                 alert('Option Error');
             }
@@ -140,7 +146,6 @@
 
     function deleteAll() {
         var deleteList = $('input[name = "selected"]:checked');
-        console.log(deleteList);
         for (var i = 0;i <deleteList.length; i++){
             deleteElement(deleteList[i].value);
         }
@@ -154,6 +159,7 @@
             '   <input type="checkbox" value="'+id+'" name="selected">' +
                 '<span style="float: right">' +
                 '   <button class="btn btn-sm btn-primary" onclick="drowElement(\''+id+'\', this)">置底</button>' +
+                '   <button class="btn btn-sm btn-primary" disabled style="display: none">已置底</button>' +
                 '   <button class="btn btn-sm btn-danger" onclick="deleteElement(\''+id+'\')">屏蔽</button>' +
                 '</span>' +
             '</div>' +
@@ -169,6 +175,7 @@
             '   <input type="checkbox" value="'+id+'" name="selected">' +
                 '<span style="float: right">' +
                 '   <button class="btn btn-sm btn-primary" onclick="drowElement(\''+id+'\', this)">置底</button>' +
+                '   <button class="btn btn-sm btn-primary" disabled style="display: none">已置底</button>' +
                 '   <button class="btn btn-sm btn-danger" onclick="deleteElement(\''+id+'\')">屏蔽</button>' +
                 '</span>' +
             '</div>' +
